<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="action_settings">Settings</string>

    <string name="bPrevText">Previous Question</string>
    <string name="bNextText">Next Question</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="toast_correct">Correct!</string>
    <string name="toast_incorrect">Incorrect!</string>

    <!-- Questions -->
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the World\'s oldest and deepest freshwater lake.</string>

    <!-- Cheat -->
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="title_activity_cheat">Cheat</string>

    <string name="hello_world">Hello world!</string>

</resources>
